--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -11,4 +11,10 @@ li {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.header .container {
+  width: clamp(350px, 81.25vw, 1170px);
+  margin: 0 auto;
+  border: 1px solid red;
 }/*# sourceMappingURL=home.css.map */
