--- a/assets/style/_latest-project.scss
+++ b/assets/style/_latest-project.scss
@@ -7,7 +7,7 @@
     width: clamp(350px,81.25vw,1170px);
     margin: 0 auto;
 
-    p {
+    & > p {
       font-size: .334em;
       color: rgba(18, 18, 18, 0.60);
       margin: 0 auto;
@@ -16,7 +16,7 @@
       width: max-content;
     }
 
-    p::before {
+    & > p::before {
       content: '';
       position: absolute;
       top: 50%;
@@ -28,7 +28,7 @@
       border-radius: 5px;
     }
 
-    p::after {
+    & > p::after {
       content: '';
       position: absolute;
       top: 50%;
@@ -47,4 +47,56 @@
     font-size: 1em;
   }
 
+}
+
+.latest-projects__items {
+  margin-top: 1.34em;
+  
+}
+
+.latest-projects__items_item {
+  display: flex;
+  gap: 1em;
+  
+  
+  & > div {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: flex-start;
+
+    h3 {
+      font-size: .834em;
+      font-weight: 600;
+    }
+  
+    p {
+      font-size: .4em;
+      font-weight: 500;
+      text-align: justify;
+      line-height: 1.91;
+      margin: .8em 0;
+    }
+
+    img {
+      translate: 0 -15%;
+      border-radius: 10.2px;
+      // object-fit: cover;
+      width: clamp(15px,40.07vw,577px);
+      justify-self: flex-start;
+    }
+  }
+
+}
+
+.latest-projects__items_item:nth-child(even) {
+
+  & > div:first-child {
+    order: 2;
+  }
+}
+
+.latest-projects__items_item:not(:first-child) {
+  margin-top: 1.7em;
 }
