--- a/assets/style/admin/admin.css
+++ b/assets/style/admin/admin.css
@@ -20,14 +20,14 @@ body {
   flex-direction: column;
   align-items: center;
   width: 25%;
-  border-right: 5px solid #121212;
+  border-right: 3px solid #121212;
   border-radius: 0 15px 15px 0;
   color: #000;
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
 }
 .dashboard__sections_item {
-  font-size: 32px;
+  font-size: 28px;
   padding: 15px;
   cursor: pointer;
   border: 1px solid #121212;
@@ -68,9 +68,15 @@ body {
   display: block;
   padding: 15px;
 }
+.dashboard__panel_form .hidden {
+  display: none;
+}
+.dashboard__panel_form .Title {
+  width: 98%;
+}
 .dashboard__panel_table {
   margin-top: 50px;
-  width: 78%;
+  width: 681px;
   border-collapse: collapse;
 }
 .dashboard__panel_table th:first-child {
@@ -84,32 +90,35 @@ body {
 .dashboard__panel_table_body_td {
   font-size: 20px;
   text-align: center;
-  padding: 8px;
+  height: 50px;
   border: 1px solid;
 }
 
 .dashboard__panel_table_body_option {
   display: flex;
-  gap: 40px;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   border: 1px solid;
-  padding: 8.25px;
+  height: 53.5px;
   border-top: 0;
   border-left: 0;
 }
-.dashboard__panel_table_body_option div {
+.dashboard__panel_table_body_option > * {
   border: 1px solid;
   border-radius: 24px;
   padding: 5px 10px;
   width: -moz-max-content;
   width: max-content;
-  text-align: center;
+  height: -moz-min-content;
+  height: min-content;
   cursor: pointer;
   font-size: 20px;
 }
 .dashboard__panel_table_body_option .delete:hover {
-  background-color: #ff5f5f;
+  color: #ff5f5f;
+  border: 2px solid;
 }
 .dashboard__panel_table_body_option .edit:hover {
-  background-color: #9de52e;
+  color: #6dac0f;
+  border: 2px solid;
 }/*# sourceMappingURL=admin.css.map */
