--- a/assets/style/admin/admin.css
+++ b/assets/style/admin/admin.css
@@ -12,22 +12,22 @@ body {
   height: 90vh;
   border: 1px solid #121212;
   border-radius: 5px;
-  background: #fff;
   opacity: 90%;
+  gap: 30px;
 }
 .dashboard__sections {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 25%;
-  border-right: 3px solid #121212;
-  border-radius: 0 15px 15px 0;
+  border-right: 1px solid #121212;
   color: #000;
+  background: #fff;
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
 }
 .dashboard__sections_item {
-  font-size: 28px;
+  font-size: 22px;
   padding: 15px;
   cursor: pointer;
   border: 1px solid #121212;
@@ -48,6 +48,8 @@ body {
   width: 75%;
   height: 100%;
   overflow-y: auto;
+  background: #fff;
+  border-left: 1px solid #121212;
 }
 .dashboard__panel_form legend {
   font-size: 22px;
