--- a/assets/style/admin/admin.scss
+++ b/assets/style/admin/admin.scss
@@ -16,22 +16,24 @@ body {
   height: 90vh;
   border: 1px solid #121212;
   border-radius: 5px;
-  background: #fff;
   opacity: 90%;
+  gap: 30px;
+
   // background-color: ;
   &__sections {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 25%;
-    border-right: 3px solid #121212;
-    border-radius: 0 15px 15px 0;
+    border-right: 1px solid #121212;
+    // border-radius: 0 15px 15px 0;
     color: #000;
+    background: #fff;
     backdrop-filter: blur(15px);
 
 
     &_item {
-      font-size: 28px;
+      font-size: 22px;
       padding: 15px;
       cursor: pointer;
       border: 1px solid #121212;
@@ -60,7 +62,10 @@ body {
   width: 75%;
   height: 100%;
   overflow-y: auto;
-
+  background: #fff;
+  border-left: 1px solid #121212;
+  
+  
   &_form {
 
     legend {
