--- a/assets/style/_latest-project.scss
+++ b/assets/style/_latest-project.scss
@@ -79,17 +79,32 @@
       font-weight: 500;
       text-align: justify;
       line-height: 1.91;
-      margin: .8em 0;
+      margin: 1.67em 0;
+    }
+
+    .button {
+      border: none;
+      background-color: #ff6a28;
+      font-size: .33em;
+      padding: .56em 1.47em;
+      font-weight: 600;
+      border-radius: 5px;
+      color: #fff;
+      cursor: pointer;
+      transition: scale .3s ease;
+      width: max-content;
+  
+    }
+  
+    .button:active {
+      scale: .95;
     }
 
     img {
-      // translate: 0 -15%;
       border-radius: 10.2px;
       object-fit: 100%;
       width: 100%;
-      // height: 100%;
-      // width: clamp(15px,40.07vw,540px);
-      height: clamp(15px,38vw,430px);
+      height: clamp(15px,38vw,477px);
       justify-self: flex-start;
     }
   }
@@ -100,6 +115,10 @@
 
   & > div:first-child {
     order: 2;
+
+    .button {
+      margin: 0 0 0 auto;
+    }
   }
 }
 
