--- a/assets/style/admin/admin.css
+++ b/assets/style/admin/admin.css
@@ -14,6 +14,7 @@ body {
   border-radius: 5px;
   opacity: 90%;
   gap: 30px;
+  border-radius: 30px;
 }
 .dashboard__sections {
   display: flex;
@@ -25,6 +26,7 @@ body {
   background: #fff;
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
+  padding-bottom: 30px;
 }
 .dashboard__sections_item {
   font-size: 22px;
@@ -39,6 +41,12 @@ body {
 }
 .dashboard__sections_item:active {
   scale: 0.95;
+}
+.dashboard__sections_form {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 
 .dashboard__panel {
@@ -127,4 +135,25 @@ body {
 
 .red-border {
   border: 2px solid red;
+}
+
+.authorization {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 50;
+  background-color: #f8fafb;
+  transition: translate 0.8s linear;
+  border: 2px solid;
+}
+.authorization__form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }/*# sourceMappingURL=admin.css.map */
