--- a/assets/style/admin/admin.scss
+++ b/assets/style/admin/admin.scss
@@ -18,6 +18,8 @@ body {
   border-radius: 5px;
   opacity: 90%;
   gap: 30px;
+  border-radius: 30px;
+
 
   // background-color: ;
   &__sections {
@@ -30,7 +32,7 @@ body {
     color: #000;
     background: #fff;
     backdrop-filter: blur(15px);
-
+    padding-bottom: 30px;
 
     &_item {
       font-size: 22px;
@@ -49,8 +51,16 @@ body {
       scale: .95;
     }
     
+    &_form {
+      // justify-self: flex-end;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: end;
+    }
+    
   }
-
+  
 }
 
 
@@ -139,20 +149,14 @@ body {
   border-left: 0;
 
   & > * {
-    // vertical-align: middle;
     border: 1px solid;
     border-radius: 24px;
     padding: 5px 10px;
     width: max-content;
     height: min-content;
-    // text-align: center;
     cursor: pointer;
     font-size: 20px;
   }
-
-  // div {
-    
-  // }
 
   .delete:hover {
     color: #ff5f5f;
@@ -170,4 +174,26 @@ body {
 
 .red-border {
   border: 2px solid red;
+}
+
+.authorization {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 50;
+  background-color: #f8fafb;
+  transition: translate .8s linear;
+  border: 2px solid;
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
 }
