--- a/assets/scss/_slider.scss
+++ b/assets/scss/_slider.scss
@@ -35,9 +35,8 @@
     .cont{
         ul{
             li{
-                .product-box:hover{
-                    // box-shadow: 2px 3px 8px rgb(0, 0, 0, 0.08);
-                    transform: scale(1.008);
+                .product-box:hover .ph-place{
+                    box-shadow: 0px 55px 75px -45px rgba(18, 18, 18, 0.4);
                     transition: all ease .3s;
                 }
                 .product-box{
@@ -53,6 +52,7 @@
                         height: 210.67px;
                         border-radius: 8px;
                         background: #C4C4C4;
+                        transition: all ease .3s;
                     }
                     .box-text{
                         margin-top: 28px;
