--- a/assets/scss/_switcher.scss
+++ b/assets/scss/_switcher.scss
@@ -58,6 +58,8 @@
                     height: 416px;
                     border-radius: 10px;
                     background: #C4C4C4;
+                    box-shadow: 0px 55px 75px -45px rgba(18, 18, 18, 0.4);
+                    cursor: pointer;
                 }
                 .text{
                     margin-left: 50px;
@@ -93,6 +95,7 @@
                         line-height: 191%; /* 45.84px */
                     }
                     .btns{
+                        z-index: 2;
                         margin-top: 40px;
                         display: flex;
                         gap: 21px;
@@ -104,12 +107,27 @@
                             display: flex;
                             justify-content: center;
                             align-items: center;
+                            background-color: white;
+                            transition: all 150ms;
                         }
-                        .prev{
-                            background-color: #ffffff;
-                        }
-                        .next{
+                        button:active{
+                            transform: scale(0.85);
                             background-color: #FF6A28;
+                        }
+                        button:active svg path{
+                            stroke: #FFFFFF;
+                        }
+                        .prev:hover{
+                            background-color: #FF6A28;
+                        }
+                        .prev:hover .prev-icon path{
+                            stroke: #FFFFFF;
+                        }
+                        .next:hover{
+                            background-color: #FF6A28;
+                        }
+                        .next:hover .next-icon path{
+                            stroke: #FFFFFF;
                         }
                     }
                 }
@@ -136,7 +154,7 @@
 
 @media (max-width: 1040px){
     .switcher{
-        padding: 40px 0 820px;
+        padding: 40px 0 900px;
         .cont{
             ul{
                 .slide{
@@ -144,6 +162,10 @@
                     grid-template-rows: 416px 1fr;
                     .img-place{
                         width: 100%;
+                    }
+                    .text{
+                        margin-top: 50px;
+                        margin-left: 0;
                     }
                 }
             }
@@ -153,7 +175,7 @@
 
 @media (max-width: 985px){
     .switcher{
-        padding: 40px 0 910px;
+        padding: 40px 0 950px;
 
     }
 }
@@ -161,12 +183,31 @@
 
 @media (max-width: 545px){
     .switcher{
-        padding: 40px 0 1000px;
+        padding: 40px 0 950px;
 
     }
 }
 
-@media (max-width: 430px){
+@media (max-width: 487px){
+    .switcher{
+        padding: 40px 0 1030px;
+    }
+}
+
+@media (max-width: 473px){
+    .switcher{
+        padding: 40px 0 1050px;
+    }
+}
+
+@media (max-width: 372px){
+    .switcher{
+        padding: 40px 0 1100px;
+
+    }
+}
+
+@media (max-width: 348px){
     .switcher{
         padding: 40px 0 1180px;
 
