--- a/assets/scss/main/main.css
+++ b/assets/scss/main/main.css
@@ -28,8 +28,8 @@
 .product-slider {
   margin-top: 39px;
 }
-.product-slider .cont ul li .product-box:hover {
-  transform: scale(1.008);
+.product-slider .cont ul li .product-box:hover .ph-place {
+  box-shadow: 0px 55px 75px -45px rgba(18, 18, 18, 0.4);
   transition: all ease 0.3s;
 }
 .product-slider .cont ul li .product-box {
@@ -46,6 +46,7 @@
   height: 210.67px;
   border-radius: 8px;
   background: #C4C4C4;
+  transition: all ease 0.3s;
 }
 .product-slider .cont ul li .product-box .box-text {
   margin-top: 28px;
@@ -183,6 +184,8 @@
   height: 416px;
   border-radius: 10px;
   background: #C4C4C4;
+  box-shadow: 0px 55px 75px -45px rgba(18, 18, 18, 0.4);
+  cursor: pointer;
 }
 .switcher .cont ul .slide .text {
   margin-left: 50px;
@@ -218,6 +221,7 @@
   line-height: 191%; /* 45.84px */
 }
 .switcher .cont ul .slide .text .btns {
+  z-index: 2;
   margin-top: 40px;
   display: flex;
   gap: 21px;
@@ -230,12 +234,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
+  transition: all 150ms;
 }
-.switcher .cont ul .slide .text .btns .prev {
-  background-color: #ffffff;
-}
-.switcher .cont ul .slide .text .btns .next {
+.switcher .cont ul .slide .text .btns button:active {
+  transform: scale(0.85);
   background-color: #FF6A28;
+}
+.switcher .cont ul .slide .text .btns button:active svg path {
+  stroke: #FFFFFF;
+}
+.switcher .cont ul .slide .text .btns .prev:hover {
+  background-color: #FF6A28;
+}
+.switcher .cont ul .slide .text .btns .prev:hover .prev-icon path {
+  stroke: #FFFFFF;
+}
+.switcher .cont ul .slide .text .btns .next:hover {
+  background-color: #FF6A28;
+}
+.switcher .cont ul .slide .text .btns .next:hover .next-icon path {
+  stroke: #FFFFFF;
 }
 .switcher .cont ul .slide[data-active] {
   opacity: 1;
@@ -248,7 +267,7 @@
 }
 @media (max-width: 1040px) {
   .switcher {
-    padding: 40px 0 820px;
+    padding: 40px 0 900px;
   }
   .switcher .cont ul .slide {
     grid-template-columns: 1fr;
@@ -257,18 +276,37 @@
   .switcher .cont ul .slide .img-place {
     width: 100%;
   }
+  .switcher .cont ul .slide .text {
+    margin-top: 50px;
+    margin-left: 0;
+  }
 }
 @media (max-width: 985px) {
   .switcher {
-    padding: 40px 0 910px;
+    padding: 40px 0 950px;
   }
 }
 @media (max-width: 545px) {
   .switcher {
-    padding: 40px 0 1000px;
+    padding: 40px 0 950px;
   }
 }
-@media (max-width: 430px) {
+@media (max-width: 487px) {
+  .switcher {
+    padding: 40px 0 1030px;
+  }
+}
+@media (max-width: 473px) {
+  .switcher {
+    padding: 40px 0 1050px;
+  }
+}
+@media (max-width: 372px) {
+  .switcher {
+    padding: 40px 0 1100px;
+  }
+}
+@media (max-width: 348px) {
   .switcher {
     padding: 40px 0 1180px;
   }
