--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -202,7 +202,7 @@ button {
 }
 .showcase {
   margin-top: clamp(15px, 3.33vw, 48px);
-  font-size: clamp(32px, 4.16vw, 60px);
+  font-size: clamp(40px, 4.16vw, 60px);
   font-family: Poppins;
   margin-bottom: 1.834em;
 }
@@ -214,7 +214,7 @@ button {
 }
 .showcase .container > p {
   color: rgba(18, 18, 18, 0.6);
-  font-size: max(14px, 0.33em);
+  font-size: max(18px, 0.33em);
   text-align: center;
   margin: 2.1em 0;
 }
@@ -227,7 +227,7 @@ button {
 .showcase .button {
   border: none;
   background-color: #ff6a28;
-  font-size: 0.33em;
+  font-size: 0.38em;
   padding: 0.56em 1.47em;
   margin: 0 auto;
   font-weight: 600;
@@ -590,7 +590,7 @@ button {
   }
 }
 .latest-projects {
-  font-size: clamp(20px, 4.167vw, 60px);
+  font-size: clamp(35px, 4.167vw, 60px);
   margin-top: clamp(15px, 5.833vw, 84px);
   font-family: Poppins;
   margin-bottom: 2.4em;
@@ -653,11 +653,11 @@ button {
   overflow: hidden;
 }
 .latest-projects__items_item > div h3 {
-  font-size: 0.834em;
+  font-size: 0.75em;
   font-weight: 600;
 }
 .latest-projects__items_item > div p {
-  font-size: 0.4em;
+  font-size: 0.45em;
   font-weight: 500;
   text-align: justify;
   line-height: 1.91;
@@ -666,7 +666,7 @@ button {
 .latest-projects__items_item > div .button {
   border: none;
   background-color: #ff6a28;
-  font-size: 0.33em;
+  font-size: 0.3em;
   padding: 0.56em 1.47em;
   font-weight: 600;
   border-radius: 5px;
@@ -699,6 +699,65 @@ button {
   margin-top: 1.7em;
 }
 
+@media (max-width: 860px) {
+  .latest-projects .container {
+    width: 95%;
+  }
+  .latest-projects__items {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+  .latest-projects__items_item {
+    flex-direction: column;
+    font-size: 1.4em;
+    align-items: center;
+  }
+  .latest-projects__items_item > div {
+    width: 65%;
+  }
+  .latest-projects__items_item > div h3 {
+    font-size: 0.75em;
+  }
+  .latest-projects__items_item > div p {
+    margin: 1.4em 0;
+    font-size: 0.4em;
+  }
+  .latest-projects__items_item:nth-child(even) > div:first-child {
+    order: -1;
+  }
+  .latest-projects__items_item:nth-child(even) > div:first-child .button {
+    margin: 0;
+  }
+}
+@media (max-width: 640px) {
+  .latest-projects__items {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+  .latest-projects__items_item {
+    flex-direction: column;
+    font-size: 1.4em;
+    align-items: center;
+  }
+  .latest-projects__items_item > div {
+    width: 80%;
+  }
+  .latest-projects__items_item > div h3 {
+    font-size: 0.6em;
+  }
+  .latest-projects__items_item > div p {
+    margin: 1.4em 0;
+    font-size: 0.3em;
+  }
+  .latest-projects__items_item:nth-child(even) > div:first-child {
+    order: -1;
+  }
+  .latest-projects__items_item:nth-child(even) > div:first-child .button {
+    margin: 0;
+  }
+}
 .form {
   width: 100%;
   padding: 0 135px;
