--- a/assets/style/admin/admin.scss
+++ b/assets/style/admin/admin.scss
@@ -63,7 +63,40 @@ body {
   
 }
 
+.formDatas {
+  background: white;
+  display: none;
+  width: 100%;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
 
+  table {
+    th {
+      border: 1px solid black;
+      font-size: 20px;
+      padding: 10px 30px;
+    }
+
+    :first-child {
+      :first-child {
+        border-radius: 8px 0 0 0;
+      }
+    }
+
+    :first-child {
+      :last-child {
+        border-radius: 0 8px 0 0;
+      }
+    }
+    .border {
+      border: 1px solid black;
+      border-radius: 0 !important;
+      text-align: center;
+    }
+  }
+}
 
 .dashboard__panel {
   display: flex;
